# e_line_judge

./: CMakeLists.txt  LICENSE.txt  README.md
data/video/center/: IMG_4625.MOV  IMG_4640.MOV  IMG_4648.MOV  IMG_4659.MOV  center_04.MOV  center_07.MOV
data/video/devel_videos/: README.txt  right.MOV
data/video/left/: IMG_4633.MOV  IMG_4637.MOV  IMG_4644.MOV  IMG_4647.MOV  IMG_4652.MOV  IMG_4653.MOV  IMG_4658.MOV  left_01.MOV  left_02.MOV  left_03.MOV  left_04.MOV  left_05.MOV  left_07.MOV  left_08.MOV  left_10.MOV  left_11.MOV  left_12.MOV  left_14.MOV  left_16.MOV  left_19.MOV  left_20.MOV  left_23.MOV
data/video/misc/: IMG_4663.MOV  README.txt  misc_01.MOV  misc_02.MOV  misc_03.MOV  misc_04.MOV  misc_06.MOV  misc_08.MOV  misc_10.MOV
data/video/right/: IMG_4657.MOV  right_02.MOV  right_03.MOV  right_04.MOV  right_05.MOV
doc/: references.md
doc/evaluation/: results.csv
examples/rotate/: CMakeLists.txt
examples/rotate/src/: rotate_frames.cpp
include/e_line_judge/: ball_detection.h  ball_tracking.h  line_decision.h  pre_processing.h  surface_contact_detection.h  user_calibration.h
src/: ball_detection.cpp  ball_tracking.cpp  line_decision.cpp  main.cpp  pre_processing.cpp  surface_contact_detection.cpp  user_calibration.cpp
